--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
     "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.11",
+    "@types/mocha": "^10.0.6",
+    "i": "^0.3.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm": "^10.2.5",
+    "or": "^0.2.0",
     "typescript": "~5.1.3"
   }
 }
