--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "ngx-socket-io": "^4.6.1",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.7.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
